--- a/blank.html
+++ b/blank.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pictures/favicon_1.ico">
+    <link rel="icon" href="./pictures/favicon.ico">
 
     <title>Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -21,11 +21,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Cycloporteur.com</a>
+          <a class="navbar-brand" href="./">Cycloporteur.com</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Accueil</a></li>
+            <li class="active"><a href="./">Accueil</a></li>
             <li><a href="./blank.html">Cargo Pro</a></li>
             <li><a href="./blank.html">Cargo Familiaux</a></li>
             <li><a href="./blank.html">Location</a></li>
