--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Cycloporteur.com</a>
+          <a class="navbar-brand" href="./">Cycloporteur.com</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Accueil</a></li>
+            <li class="active"><a href="./">Accueil</a></li>
             <li><a href="./blank.html">Cargo Pro</a></li>
             <li><a href="./blank.html">Cargo Familiaux</a></li>
             <li><a href="./blank.html">Location</a></li>
