--- a/blank.html
+++ b/blank.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <h1>A venir !</h1>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
