--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row first-row">
         <div class="col-sm-3">
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
