Add contact action

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="./blank.html">Cargo Familiaux</a></li>
             <li><a href="./blank.html">Location</a></li>
             <li><a href="./blank.html">Services</a></li>
-            <li><a href="./blank.html">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
