--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./pictures/favicon.ico">
 
-    <title>Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Merci ! | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -25,20 +25,27 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./">Accueil</a></li>
+            <li><a href="./">Accueil</a></li>
             <li><a href="./blank.html">Cargo Pro</a></li>
             <li><a href="./blank.html">Cargo Familiaux</a></li>
             <li><a href="./blank.html">Location</a></li>
             <li><a href="./blank.html">Services</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
-      <h1>A venir !</h1>
-      <p>Notre site est en construction. Mais vous pouvez toujours <a href="./contact.html">nous contacter</a> !</p>
+      <div class="row first-row">
+        <div class="col-sm-3">
+          <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+        </div>
+        <div class="col-sm-9">
+          <h1>Merci !</h1>
+          <p>Votre message a été transmis. Nous vous répondrons dans les plus brefs délais.</p>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
