Add contact info

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <li><a href="./blank.html">Services</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -41,6 +41,20 @@
       <div class="row first-row">
         <div class="col-sm-3">
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+          <div class="bigger-address">
+            <p>
+              <h4>Cycloporteur.com</h4>
+              10 bis rue de l'Épinette<br>
+              59491 Villeneuve d'Ascq
+            </p>
+          </div>
+          <div class="bigger-address">
+            <p>
+              <h4>Nicolas Dellery</h4>
+              Directeur technique<br>
+              +33 (0)6 30 61 45 94
+            </p>
+          </div>
         </div>
         <div class="col-sm-9">
           <h1>Contact</h1>
