--- a/familiaux.html
+++ b/familiaux.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pictures/favicon.ico">
+    <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Merci ! | Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Cargos Familiaux | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -28,10 +28,10 @@
             <li><a href="./">Accueil</a></li>
             <li><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
-            <li><a href="./familiaux.html">Cargos Familiaux</a></li>
+            <li class="active"><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./location.html">Location</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li class="active"><a href="./contact.html">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -42,9 +42,18 @@
         <div class="col-sm-3">
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
         </div>
-        <div class="col-sm-9">
-          <h1>Merci !</h1>
-          <p>Votre message a été transmis. Nous vous répondrons dans les plus brefs délais.</p>
+        <div class="col-sm-9 starter-template">
+          <h1>Cargos Familiaux</h1>
+          <p class="main-text">
+            Pour les familles, c’est plus simple, on choisit ensemble votre monture parmi les <strong>meilleurs constructeurs européens</strong>, sa couleur et ses quelques accessoires marrants, et vous installez les bambinos dans votre beau carrosse. En plus, vous les avez devant vous, c’est plus sympa pour tout le monde.<br>
+            Les courses aussi, elles sont devant, mais ça, c’est pour picorer dans la baguette.
+          </p>
+          <p class="main-text">
+            Soyez aussi assurés que la <strong>qualité</strong> et les normes appliquées aux produits que nous proposons sauront vous convaincre quant à la <strong>sécurité</strong> de vos déplacements en famille ! D’ailleurs, ces normes répondent au doux nom de EN 15194.
+          </p>
+          <p class="lead">
+            En résumé, vos projets de mobilité douce nous intéressent ! Naviguez sur le site, <a href="./contact.html">contactez-nous</a>, on vous répond par un devis détaillé.
+          </p>
         </div>
       </div>
     </div>
