--- a/pro.html
+++ b/pro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Cargos Pro | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -25,8 +25,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./">Accueil</a></li>
-            <li><a href="./pro.html">Cargos Pro</a></li>
+            <li><a href="./">Accueil</a></li>
+            <li class="active"><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./location.html">Location</a></li>
@@ -43,34 +43,26 @@
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
         </div>
         <div class="col-sm-9 starter-template">
-          <h1>Accueil</h1>
-          <p class="lead">Faire réaliser son vélo triporteur sur mesure ?   Vous êtes à la bonne place !</p>
-          <p class="lead">En effet, CYCLOPORTEUR.COM manufacture <strong>localement</strong> et selon vos besoins
-            le vélo adapté à vos activités, qu'elles soient <a href="./pro.html">professionnelles</a> ou <a href="./familiaux.html">familiales</a>.</p>
-            <h3>Le triporteur !</h3>
-          <p class="lead">
-            Utilisés depuis plus d’un siècle, les triporteurs, remorques et biporteurs disposent d’une
-            <strong>malle ou caisse</strong> conséquente pouvant transporter indifféremment la
-            <strong>famille</strong> ou les <strong>courses</strong> pour un usage particulier,
-            ainsi que tout type de <strong>marchandise</strong> pour un usage professionnel, telle que la <strong>vente ambulante</strong>.
+          <h1>Cargos Professionnels</h1>
+          <p class="main-text">
+            Pour les pros, on propose deux bases cycle Triporteur (les roues devant avec le chargement) : l’une qui peut supporter jusqu’à 100 kilos en mouvement, et l’autre jusqu’à 250 kilos.
+            <br>Freinage, roues, châssis, assistance électrique, tout est renforcé !
+          </p>
+          <p class="main-text">
+            Pour les pros toujours, il faut aussi un caisson dédié à votre activité : <strong>transport</strong> ou <strong>vente ambulante</strong> ? Pour cela il faut déterminer  en vrac les volumes, isolation, éclairage, accès, porte, vitrine, tonnelle, étagères, tiroirs, plateaux dessertes, insertion de TPE. Allez y, y’a qu’à demander ...
           </p>
           <p class="lead">
-            Notre métier : soutenir vos <strong>projets et concepts</strong> dans l’esprit de votre entreprise grâce à nos <strong>solutions sur mesure</strong>.
+            Et tout ça chez <a href="cycloporteur.com">Cycloporteur.com</a>, on sait faire depuis plus de 7 ans !
           </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-6 gallery-pic">
-          <img src="./pictures/cargo_bike_cycloporteur_toit.png" alt="Cycloporteur professionnel toit">
-        </div>
-        <div class="col-md-3 col-sm-6 gallery-pic">
-          <img src="./pictures/cargo_bike_famille_winter.jpg" alt="Cycloporteur famille Winter">
-        </div>
-        <div class="col-md-3 col-sm-6 gallery-pic">
-          <img src="./pictures/cargo_bike_cycloporteur_vitrine.png" alt="Cycloporteur professionnel vitrine">
-        </div>
-        <div class="col-md-3 col-sm-6 gallery-pic">
-          <img src="./pictures/cargo_bike_famille_christiania.jpg" alt="Cycloporteur famille Christiania">
+          <p class="main-text">
+            On vous proposera aussi tous les accessoires possibles et inimaginables, et même ceux qu’on n’a pas et dont vous rêviez depuis votre enfance.
+          </p>
+          <p class="main-text">
+            Au fait, le tricycle avec le chargement à l’arrière, ça aussi c’est possible chez nous !
+          </p>
+          <p class="lead">
+            En résumé, vos projets de mobilité douce nous intéressent ! Naviguez sur le site, <a href="./contact.html">contactez-nous</a>, on vous répond par un devis détaillé.
+          </p>
         </div>
       </div>
     </div>
