--- a/remorques.html
+++ b/remorques.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pictures/favicon.ico">
+    <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Merci ! | Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Remorques | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -27,11 +27,11 @@
           <ul class="nav navbar-nav">
             <li><a href="./">Accueil</a></li>
             <li><a href="./pro.html">Cargos Pro</a></li>
-            <li><a href="./remorques.html">Remorques</a></li>
+            <li class="active"><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./location.html">Location</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li class="active"><a href="./contact.html">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -42,9 +42,20 @@
         <div class="col-sm-3">
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
         </div>
-        <div class="col-sm-9">
-          <h1>Merci !</h1>
-          <p>Votre message a été transmis. Nous vous répondrons dans les plus brefs délais.</p>
+        <div class="col-sm-9 starter-template">
+          <h1>La remorque</h1>
+          <p class="main-text">
+            Accessoire indispensable quand on passe aux choses sérieuses de la mobilité douce, nous en proposons deux :
+          </p>
+          <p class="main-text">
+            La 70, pour <strong>70 kilos</strong> à fixer sur le moyeu du vélo, et libre à vous de nous dire ce que vous voulez mettre dessus comme caisson.
+          </p>
+          <p class="main-text">
+            La 250, pour <strong>250 kilos</strong> avec son frein hydraulique automatique attachée directement sur la structure du vélo par un timon ; une fois de plus, on y installe le caisson professionnel de vos rêves avec tous ses accessoires et même bien plus.
+          </p>
+          <p class="lead">
+            En résumé, vos projets de mobilité douce nous intéressent ! Naviguez sur le site, <a href="./contact.html">contactez-nous</a>, on vous répond par un devis détaillé.
+          </p>
         </div>
       </div>
     </div>
