--- a/services.html
+++ b/services.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pictures/favicon.ico">
+    <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Merci ! | Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Services | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -30,8 +30,8 @@
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./location.html">Location</a></li>
-            <li><a href="./services.html">Services</a></li>
-            <li class="active"><a href="./contact.html">Contact</a></li>
+            <li class="active"><a href="./services.html">Services</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -42,9 +42,17 @@
         <div class="col-sm-3">
           <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
         </div>
-        <div class="col-sm-9">
-          <h1>Merci !</h1>
-          <p>Votre message a été transmis. Nous vous répondrons dans les plus brefs délais.</p>
+        <div class="col-sm-9 starter-template">
+          <h1>Services</h1>
+          <p class="lead">
+            Un triporteur qui sert est un triporteur qui s’use !
+          </p>
+          <p class="main-text">
+            On a tout prévu, de la maintenance en nos ateliers jusqu’à sur site, on intervient pour régler, améliorer, nettoyer et changer les consommables : rayons, pneus, chambres à air, freinage, graissage, huilage ...
+          </p>
+          <p class="lead">
+            Allez, en prenant  <a href="./contact.html">contact</a>, on compare et on adhère !
+          </p>
         </div>
       </div>
     </div>
