--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,11 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="./">Accueil</a></li>
-            <li><a href="./blank.html">Cargo Pro</a></li>
-            <li><a href="./blank.html">Cargo Familiaux</a></li>
-            <li><a href="./blank.html">Location</a></li>
-            <li><a href="./blank.html">Services</a></li>
+            <li><a href="./pro.html">Cargos Pro</a></li>
+            <li><a href="./remorques.html">Remorques</a></li>
+            <li><a href="./familiaux.html">Cargos Familiaux</a></li>
+            <li><a href="./location.html">Location</a></li>
+            <li><a href="./services.html">Services</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
@@ -51,13 +52,15 @@
           <div class="bigger-address">
             <p>
               <h4>Nicolas Dellery</h4>
-              Directeur technique<br>
+              Antenne parisienne<br>
               +33 (0)6 30 61 45 94
             </p>
           </div>
         </div>
         <div class="col-sm-9">
-          <h1>Contact</h1>
+          <div class="col-sm-10 col-sm-offset-2">
+            <h1>Contact</h1>
+          </div>
           <form action="verify.php" method="post" class="form-horizontal">
             <div class="form-group">
               <label for="name" class="col-sm-2 control-label">Nom *</label>
@@ -103,6 +106,13 @@
             <div class="form-group">
               <div class="col-sm-10 col-sm-offset-2">
                 <input class="form-control btn btn-success" type="submit">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-10 col-sm-offset-2">
+                <p class="form-control-static">
+                  N.B. : Nos produits sont garanties pièces et main d’œuvre 2 années, mais attention aux pièces d’usure ; celles qui souffrent : pneus, roues, rayons, chambres à air, freins (disques et plaquettes) directement liés à la fréquence d’utilisation et la qualité du pilote ! et ça, on assume de ne pas assumer !
+                </p>
               </div>
             </div>
           </form>
