--- a/location.html
+++ b/location.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pictures/favicon.ico">
+    <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Location | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -25,11 +25,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./">Accueil</a></li>
-            <li><a href="./blank.html">Cargo Pro</a></li>
-            <li><a href="./blank.html">Cargo Familiaux</a></li>
-            <li><a href="./blank.html">Location</a></li>
-            <li><a href="./blank.html">Services</a></li>
+            <li><a href="./">Accueil</a></li>
+            <li><a href="./pro.html">Cargos Pro</a></li>
+            <li><a href="./remorques.html">Remorques</a></li>
+            <li><a href="./familiaux.html">Cargos Familiaux</a></li>
+            <li class="active"><a href="./location.html">Location</a></li>
+            <li><a href="./services.html">Services</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -37,8 +38,23 @@
     </nav>
 
     <div class="container">
-      <h1>A venir !</h1>
-      <p>Notre site est en construction. Mais vous pouvez toujours <a href="./contact.html">nous contacter</a> !</p>
+      <div class="row first-row">
+        <div class="col-sm-3">
+          <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+        </div>
+        <div class="col-sm-9 starter-template">
+          <h1>Location</h1>
+          <p class="main-text">
+            Le professionnel que vous êtes a besoin d’un triporteur en Île-de-France le temps d’une journée, d’un événement ?  Vous êtes à la bonne place pour le réserver !
+          </p>
+          <p class="main-text">
+            Ajustons nos agendas, on vous propose des triporteurs pro prêts à rouler, et prêts à accompagner votre activité ambulante.
+          </p>
+          <p class="lead">
+            Un petit <a href="./contact.html">contact</a>, et on vous répond !
+          </p>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
