--- a/familiaux.html
+++ b/familiaux.html
@@ -56,6 +56,20 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/nihola-cigar-1200.png" alt="Cycloporteur familial transport">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/winther-cargoo-cargo-bike-with-red-cover-1414316186.jpg" alt="Cycloporteur transport courses housse">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/winther-cargoo-cargo-bike-1414316139.jpg" alt="Cycloporteur familial transport 4 places">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/le-biporteur-coursier.jpg" alt="Biporteur transport courses">
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
