--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="./pictures/cargo_bike_cycloporteur_vitrine.png" alt="Cycloporteur professionnel vitrine">
         </div>
         <div class="col-md-3 col-sm-6 gallery-pic">
-          <img src="./pictures/cargo_bike_famille_christiania.jpg" alt="Cycloporteur famille Christiania">
+          <img src="./pictures/christiania.jpg" alt="Cycloporteur famille Christiania">
         </div>
       </div>
     </div>
