--- a/pro.html
+++ b/pro.html
@@ -65,6 +65,21 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/vitrinette-qui-bouge2.gif" alt="Cycloporteur vitrine amovible - vente ambulante">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/vitrinette-01.png" alt="Cycloporteur vitrinette vente ambulante">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/toit-01.png" alt="Cycloporteur tonnelle vente ambulante">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/le-custom.jpg" alt="Cycloporteur chassis vente ambulante caisson">
+        </div>
+      </div>
+    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
