--- a/remorques.html
+++ b/remorques.html
@@ -58,6 +58,14 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-3 col-md-offset-3 col-sm-6 gallery-pic">
+          <img src="./pictures/remorque-70.jpg" alt="Cycloporteur remorque vélo 70">
+        </div>
+        <div class="col-md-3 col-sm-6 gallery-pic">
+          <img src="./pictures/la-remorque.jpg" alt="Cycloporteur remorque vélo 250">
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
