move maintenance warning to services page

--- a/services.html
+++ b/services.html
@@ -55,6 +55,13 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="main-text margin-top">
+            <strong>N.B.</strong> Nos produits sont garanties pièces et main d’œuvre 2 années, mais attention aux pièces d’usure, celles qui souffrent : pneus, roues, rayons, chambres à air, freins (disques et plaquettes). Leur usure est directement liée à la fréquence d’utilisation et la qualité du pilote ! et ça, on assume de ne pas assumer !
+          </p>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
