Add Made in France picture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="row first-row">
         <div class="col-sm-3">
-          <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+          <img src="./pictures/cycloporteur_rouge.png" alt="Logo cycloporteur.com" class="logo-left">
         </div>
         <div class="col-sm-9 starter-template">
           <h1>Accueil</h1>
