--- a/pro.html
+++ b/pro.html
@@ -40,7 +40,8 @@
     <div class="container">
       <div class="row first-row">
         <div class="col-sm-3">
-          <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+          <img src="./pictures/cycloporteur_rouge.png" alt="Logo cycloporteur.com" class="logo-left">
+          <img src="./pictures/fabrique_france.jpg" class="made-in-france" alt="Fabriqué en France">
         </div>
         <div class="col-sm-9 starter-template">
           <h1>Cargos Professionnels</h1>
