--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row first-row">
         <div class="col-sm-3">
-          <img src="./pictures/cycloporteur_rouge.png" class="logo-left">
+          <img src="./pictures/cycloporteur_rouge.png" alt="Logo cycloporteur.com" class="logo-left">
           <div class="bigger-address">
             <p>
               <h4>Cycloporteur.com</h4>
