ajout de GA; questions pointues du formulaire de contact ; regroupement des services

--- a/pro.html
+++ b/pro.html
@@ -29,7 +29,6 @@
             <li class="active"><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
-            <li><a href="./location.html">Location</a></li>
             <li><a href="./services.html">Services</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
@@ -50,7 +49,7 @@
             <br>Freinage, roues, châssis, assistance électrique, tout est renforcé !
           </p>
           <p class="main-text">
-            Pour les pros toujours, il faut aussi un caisson dédié à votre activité : <strong>transport</strong> ou <strong>vente ambulante</strong> ? Pour cela il faut déterminer  en vrac les volumes, isolation, éclairage, accès, porte, vitrine, tonnelle, étagères, tiroirs, plateaux dessertes, insertion de TPE. Allez y, y’a qu’à demander ...
+            Pour les pros toujours, il faut aussi un caisson dédié à votre activité : <strong>transport</strong> ou <strong>vente ambulante</strong> ? Pour cela il faut déterminer  en vrac les volumes, isolation, éclairage, accès, porte, vitrine, tonnelle, étagères, tiroirs, plateaux dessertes, insertion de TPE. Allez-y, y’a qu’à demander ...
           </p>
           <p class="lead">
             Et tout ça chez <a href="cycloporteur.com">Cycloporteur.com</a>, on sait faire depuis plus de 7 ans !
@@ -84,5 +83,13 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-90284642-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
