--- a/services.html
+++ b/services.html
@@ -29,7 +29,6 @@
             <li><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
-            <li><a href="./location.html">Location</a></li>
             <li class="active"><a href="./services.html">Services</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
@@ -43,12 +42,32 @@
           <img src="./pictures/cycloporteur_rouge.png" alt="Logo cycloporteur.com" class="logo-left">
         </div>
         <div class="col-sm-9 starter-template">
-          <h1>Services</h1>
+          <h1>Services : maintenance, location, flocage</h1>
           <p class="lead">
             Un triporteur qui sert est un triporteur qui s’use !
           </p>
           <p class="main-text">
             On a tout prévu, de la maintenance en nos ateliers jusqu’à sur site, on intervient pour régler, améliorer, nettoyer et changer les consommables : rayons, pneus, chambres à air, freinage, graissage, huilage ...
+          </p>
+
+          <p class="lead">
+            Un besoin de location ?
+          </p>
+          <p class="main-text">
+            Le professionnel que vous êtes a besoin d’un triporteur en Île-de-France le temps d’une journée, d’un événement ?  Vous êtes à la bonne place pour le réserver !
+          </p>
+          <p class="main-text">
+            Ajustons nos agendas, on vous propose des triporteurs pro prêts à rouler, et prêts à accompagner votre activité ambulante.
+          </p>
+
+          <p class="lead">
+            Portez haut vos couleurs !
+          </p>
+          <p class="main-text">
+            Confondre votre image à celle de votre triporteur ou de sa remorque : en voilà une riche idée !
+          </p>
+          <p class="main-text">
+            Contre quelques espèces sonnantes et trébuchantes, le flocage, la sérigraphie, la décalcomanie transformeront votre bike-food en vélo-sandwich, votre vélo-cargo en véhicule publicitaire. À vous de déterminer le niveau de tapage souhaité, nous on ne fait qu’exécuter à partir de votre identité visuelle.
           </p>
           <p class="lead">
             Allez, en prenant  <a href="./contact.html">contact</a>, on compare et on adhère !
@@ -65,5 +84,13 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-90284642-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
