--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,6 @@
             <li><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
-            <li><a href="./location.html">Location</a></li>
             <li><a href="./services.html">Services</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
@@ -89,7 +88,42 @@
             <div class="form-group">
               <label for="message" class="col-sm-2 control-label">Message *</label>
               <div class="col-sm-10">
-                <textarea rows="5" name="message" class="form-control" placeholder="Entrez votre message ici ..." required></textarea>
+                <textarea rows="10" name="message" class="form-control" placeholder="Entrez votre message ici ..." required>
+Message libre :
+
+
+
+
+Quelques questions pour nous aider à définir votre besoin avec précision :
+
+Quelle est l'activité à laquelle est destiné le triporteur - vente ambulante, Bike-Food, événementiel ?
+
+
+Combien de kilomètres pensez-vous parcourir par jour avec le triporteur?
+
+
+Comptez-vous affecter plusieurs personnes différentes au véhicule? Si oui, combien ?
+
+
+Disposez-vous d'une alimentation électrique à coté de votre lieu d'exploitation ?
+
+
+Travaillerez-vous en intérieur, en extérieur ou les deux ? Avez-vous besoin d'une remorque ?
+
+
+Quels sont les équipements spécifiques liés à votre métier (bacs gastronomiques, outils de confection, dévidoir, TPE, comptoir) ? Si vous utilisez un appareillage particulier quelle est sa consommation électrique, d’eau ou de gaz ?
+
+
+Quel est votre volume de marchandise ? Doit-elle être conservée dans des conditions particulières ?
+
+
+Souhaitez-vous harmoniser le triporteur de votre logo et de couleurs spécifiques (peinture, flocage, adhésif)?
+
+
+N'hésitez pas à nous communiquer toute autre information pertinente :
+
+
+                </textarea>
               </div>
             </div>
             <div class="form-group">
@@ -114,5 +148,13 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-90284642-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
