--- a/thanks.html
+++ b/thanks.html
@@ -29,7 +29,6 @@
             <li><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
-            <li><a href="./location.html">Location</a></li>
             <li><a href="./services.html">Services</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
@@ -50,5 +49,15 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-90284642-1', 'auto');
+      ga('send', 'pageview');
+
+      ga('send', 'event', 'Contact', 'submit');
+    </script>
   </body>
 </html>
