Ajout photo flocage

--- a/services.html
+++ b/services.html
@@ -69,6 +69,11 @@
           <p class="main-text">
             Contre quelques espèces sonnantes et trébuchantes, le flocage, la sérigraphie, la décalcomanie transformeront votre bike-food en vélo-sandwich, votre vélo-cargo en véhicule publicitaire. À vous de déterminer le niveau de tapage souhaité, nous on ne fait qu’exécuter à partir de votre identité visuelle.
           </p>
+          <div class="row">
+            <div class="col-sm-4 col-sm-offset-4 col-xs-12 gallery-pic">
+              <img src="./pictures/flocage.jpg" alt"Flocage impression visuel cycloporteur triporteur">
+            </div>
+          </div>
           <p class="lead">
             Allez, en prenant  <a href="./contact.html">contact</a>, on compare et on adhère !
           </p>
