Add maintenance picture

--- a/services.html
+++ b/services.html
@@ -49,7 +49,11 @@
           <p class="main-text">
             On a tout prévu, de la maintenance en nos ateliers jusqu’à sur site, on intervient pour régler, améliorer, nettoyer et changer les consommables : rayons, pneus, chambres à air, freinage, graissage, huilage ...
           </p>
-
+          <div class="row picture-row">
+            <div class="col-sm-4 col-sm-offset-4 col-xs-12 gallery-pic">
+              <img src="./pictures/maintenance.jpg" alt"Maintenance entretien réglages cycloporteur triporteur">
+            </div>
+          </div>
           <p class="lead">
             Un besoin de location ?
           </p>
@@ -69,7 +73,7 @@
           <p class="main-text">
             Contre quelques espèces sonnantes et trébuchantes, le flocage, la sérigraphie, la décalcomanie transformeront votre bike-food en vélo-sandwich, votre vélo-cargo en véhicule publicitaire. À vous de déterminer le niveau de tapage souhaité, nous on ne fait qu’exécuter à partir de votre identité visuelle.
           </p>
-          <div class="row">
+          <div class="row picture-row">
             <div class="col-sm-4 col-sm-offset-4 col-xs-12 gallery-pic">
               <img src="./pictures/flocage.jpg" alt"Flocage impression visuel cycloporteur triporteur">
             </div>
