Add phone number menu

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./services.html">Services</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
+            <li><a href="tel:+33630614594">+33 (0)6 30 61 45 94</a></li>
           </ul>
         </div>
       </div>
