--- a/remorques.html
+++ b/remorques.html
@@ -31,6 +31,7 @@
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./services.html">Services</a></li>
             <li><a href="./contact.html">Contact</a></li>
+            <li><a href="tel:+33630614594">+33 (0)6 30 61 45 94</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
