--- a/autres.html
+++ b/autres.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./pictures/favicon_1.ico">
 
-    <title>Services | Cycloporteur.com - la manufacture du triporteur</title>
+    <title>Autres réalisations | Cycloporteur.com - la manufacture du triporteur</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="./files/main.css" rel="stylesheet">
   </head>
@@ -38,8 +38,8 @@
             <li><a href="./pro.html">Cargos Pro</a></li>
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
-            <li class="active"><a href="./services.html">Services</a></li>
-            <li><a href="./autres.html">Autres</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li class="active"><a href="./autres.html">Autres</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -57,51 +57,10 @@
           <img src="./pictures/cycloporteur_rouge.png" alt="Logo cycloporteur.com" class="logo-left">
         </div>
         <div class="col-sm-9 starter-template">
-          <h1>Services : maintenance, location, flocage</h1>
-          <p class="lead">
-            Un triporteur qui sert est un triporteur qui s’use !
-          </p>
+          <h1>Autres réalisations</h1>
           <p class="main-text">
-            On a tout prévu, de la maintenance en nos ateliers jusqu’à sur site, on intervient pour régler, améliorer, nettoyer et changer les consommables : rayons, pneus, chambres à air, freinage, graissage, huilage ...
-          </p>
-          <div class="row picture-row">
-            <div class="col-sm-4 col-sm-offset-4 col-xs-12 gallery-pic">
-              <img src="./pictures/maintenance.jpg" alt"Maintenance entretien réglages cycloporteur triporteur">
-            </div>
-          </div>
-          <p class="lead">
-            Un besoin de location ?
-          </p>
-          <p class="main-text">
-            Le professionnel que vous êtes a besoin d’un triporteur en Île-de-France le temps d’une journée, d’un événement ?  Vous êtes à la bonne place pour le réserver !
-          </p>
-          <p class="main-text">
-            Ajustons nos agendas, on vous propose des triporteurs pro prêts à rouler, et prêts à accompagner votre activité ambulante.
-          </p>
-
-          <p class="lead">
-            Portez haut vos couleurs !
-          </p>
-          <p class="main-text">
-            Confondre votre image à celle de votre triporteur ou de sa remorque : en voilà une riche idée !
-          </p>
-          <p class="main-text">
-            Contre quelques espèces sonnantes et trébuchantes, le flocage, la sérigraphie, la décalcomanie transformeront votre bike-food en vélo-sandwich, votre vélo-cargo en véhicule publicitaire. À vous de déterminer le niveau de tapage souhaité, nous on ne fait qu’exécuter à partir de votre identité visuelle.
-          </p>
-          <div class="row picture-row">
-            <div class="col-sm-4 col-sm-offset-4 col-xs-12 gallery-pic">
-              <img src="./pictures/flocage.jpg" alt"Flocage impression visuel cycloporteur triporteur">
-            </div>
-          </div>
-          <p class="lead">
-            Allez, en prenant  <a href="./contact.html">contact</a>, on compare et on adhère !
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <p class="main-text margin-top">
-            <strong>N.B.</strong> Nos produits sont garanties pièces et main d’œuvre 2 années, mais attention aux pièces d’usure, celles qui souffrent : pneus, roues, rayons, chambres à air, freins (disques et plaquettes). Leur usure est directement liée à la fréquence d’utilisation et la qualité du pilote ! et ça, on assume de ne pas assumer !
+Notre savoir faire nous amène à proposer et réaliser des objets aussi divers et variés que des stands professionnels, des
+meubles dédiés à tous types d activités, des karts à pédales, des structures en tout genre ... et tout ça sur mesure !
           </p>
         </div>
       </div>
