--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,15 @@
   </head>
 
   <body cz-shortcut-listen="true">
+    <div id="fb-root"></div>
+    <script>(function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.10&appId=1467122163504771';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -31,8 +40,13 @@
             <li><a href="./remorques.html">Remorques</a></li>
             <li><a href="./familiaux.html">Cargos Familiaux</a></li>
             <li><a href="./services.html">Services</a></li>
+            <li><a href="./autres.html">Autres</a></li>
             <li class="active"><a href="./contact.html">Contact</a></li>
-            <li><a href="tel:+33630614594">+33 (0)6 30 61 45 94</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="tel:+33630614594">+33 (0)6 30 61 45 94</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -55,6 +69,12 @@
               Antenne parisienne<br>
               +33 (0)6 30 61 45 94
             </p>
+          </div>
+          <div class="paris-notice">
+            <h4>Nouveau !</h4>
+            La mairie de Paris aide financièrement votre projet de mobilité douce.<br>
+            📄<a href="./files/pro-parisien.pdf" target="_blank">Pour les pros</a> -
+            📄<a href="./files/residents-parisisens.pdf" target="_blank">Pour les particuliers</a>
           </div>
         </div>
         <div class="col-sm-9">
@@ -146,6 +166,9 @@ N'hésitez pas à nous communiquer toute autre information pertinente :
           </form>
         </div>
       </div>
+    </div>
+    <div class="fb-like" data-href="https://www.facebook.com/cycloporteur/" data-layout="button_count" data-action="like" data-size="small"
+      data-show-faces="true" data-share="false">
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
